--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if title %}{{ title }}{% endif %}</title>
-    <link rel="stylesheet" href="{{ '/css/prism-okaidia.css' | url }}">
+    {# <link rel="stylesheet" href="{{ '/css/prism-okaidia.css' | url }}"> #}
+    <link rel="stylesheet" href="{{ '/css/prism-base16-monokai.dark.css' | url }}">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
-    {%- typography 'xxx' -%}
     {%- typographyFonts 'xxx' -%}
+    {# TypographyJS has a bug that does not actually output the theme #}
+    {# For now the theme is a copy and paste of the correct output in a separate CSS file #}
+    {# {%- typography 'xxx' -%} #}
+    <link rel="stylesheet" href="{{ '/css/lincoln.css' | url }}">
+    {# <link rel="stylesheet" href="{{ '/css/funston.css' | url }}"> #}
     <style>
       main {
         max-width: 45em;
