--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -58,6 +58,7 @@
       /* CODE HIGHLIGHT */
       code, pre {
         font-family: 'Source Code Pro', monospace;
+        line-height: 1.5 !important;
       }
       pre {
         margin-bottom: 2em !important;
