--- a/_includes/layouts/lilycode.njk
+++ b/_includes/layouts/lilycode.njk
@@ -30,9 +30,39 @@
       .lilypond rect {
         color: #222 !important;
       }
+      .github {
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 0.5em;
+        margin: 0.5em;
+        margin-right: 1em;
+        border-radius: 4px;
+        background-color: white;
+        z-index: 999;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      }
+      .github:hover {
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+      }
+      .github a {
+        position: relative;
+        text-decoration: none;
+        background-image: none;
+        text-shadow: none;
+        color: black;
+      }
     </style>
 	</head>
 	<body>
+    <div class="github">
+      <a href="https://github.com/pianomanfrazier/lilypond-in-markdown" target="_blank">
+      <svg width="24" height="24" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <title>GitHub Project</title>
+      <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
+      See it on GitHub
+      </a>
+    </div>
 
     <div id="main-content" class="main-content">
 
